--- a/src/style.scss
+++ b/src/style.scss
@@ -1,17 +1,133 @@
 body, html {
     font-family: "Roboto", sans-serif;
-    background: linear-gradient(to bottom, #87e0fd 0%,#53cbf1 40%,#db2020 100%);
+    background: linear-gradient(to bottom, #7b4397 0%,#dc2430 100%);
     height: 100%;
   }
 
-  .logo {
-    background-image: url('img/floridalogo.png');
-    width: 100px;
-    height: 100px;
-    background-repeat: no-repeat;
-    background-size: contain;
+select {
+    -webkit-appearance: none;
+}
+
+nav{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  text-decoration: none;
+  background-color:green;
+
+  a{
+    color: white;
+    text-decoration: none;
   }
 
-  .active {
-    color: pink;
+  a:hover{
+    color: blue;
   }
+}
+
+#home{
+  padding-right: 30vw;
+}
+
+#post-block{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+#post-block #image{
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+#post-block .post-url{
+  max-width: 50%;
+  text-align: center;
+}
+
+
+.post-section {
+  width: 28%;
+  padding: 2% 2% 2% 2%;
+  margin-bottom: 50px;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+
+  a {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      background-color: white;
+      text-decoration: none;
+
+      .posts-title {
+          font-size: 34px;
+          color:green;
+      }
+
+      .posts-tags {
+          color: orange;
+      }
+
+      img {
+          width: 100%;
+          height: auto;
+          max-height: 300px;
+          min-height: 250px;
+      }
+  }
+}
+
+.new-post {
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin-left: 8%;
+}
+
+.post{
+  width: 100%;
+  background-color: orange;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
+  width: 60%;
+  margin-left: 18%;
+  background-color: white;
+
+  
+  img {
+    width: 100%;
+    max-height: 400px;
+  }
+
+  input {
+    width: 98%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-bottom: 5px;
+    margin-top: 5px;
+  } 
+
+  .post-title {
+    padding-left: 5%;
+    color: blue;
+    font-size: 48px;
+  }
+
+  .post-content {
+    width: 50%;
+    padding-left: 5%;
+  }
+
+  .post-tags {
+    color: gray;
+    padding-left: 5%;
+  }
+}
